--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
             overflow: hidden;
         }
 
-        h1 {
-            font-size: 40px;
-        }
+        h1 { font-size: 40px; }
 
         .btn {
             padding: 12px 25px;
@@ -47,55 +45,67 @@
 </head>
 <body>
 
-    <h1>Will you be my Valentine? 💖</h1>
+<h1>Will you be my Valentine? 💖</h1>
 
-    <button id="yesBtn" class="btn">Yes 😍</button>
-    <button id="noBtn" class="btn">No 😢</button>
+<button id="yesBtn" class="btn">Yes 😍</button>
+<button id="noBtn" class="btn">No 😢</button>
 
-    <div id="message"></div>
+<div id="message"></div>
 
-    <script>
-        const noBtn = document.getElementById("noBtn");
-        const yesBtn = document.getElementById("yesBtn");
-        const message = document.getElementById("message");
+<script>
+    // Ask visitor name
+    let userName = prompt("Enter your name 😄") || "Unknown";
 
-        function moveButton() {
-            const maxX = window.innerWidth - noBtn.offsetWidth;
-            const maxY = window.innerHeight - noBtn.offsetHeight;
+    const noBtn = document.getElementById("noBtn");
+    const yesBtn = document.getElementById("yesBtn");
+    const message = document.getElementById("message");
 
-            const randomX = Math.floor(Math.random() * maxX);
-            const randomY = Math.floor(Math.random() * maxY);
+    // 🔗 Google Form endpoint (REPLACE WITH YOURS)
+    const formURL = "https://docs.google.com/forms/d/e/FORM_ID_HERE/formResponse";
 
-            noBtn.style.left = randomX + "px";
-            noBtn.style.top = randomY + "px";
+    const nameField = "entry.111111";   // Replace
+    const responseField = "entry.222222"; // Replace
+
+    function sendResponse(answer) {
+        fetch(formURL, {
+            method: "POST",
+            mode: "no-cors",
+            headers: { "Content-Type": "application/x-www-form-urlencoded" },
+            body: `${nameField}=${encodeURIComponent(userName)}&${responseField}=${encodeURIComponent(answer)}`
+        });
+    }
+
+    function moveButton() {
+        const maxX = window.innerWidth - noBtn.offsetWidth;
+        const maxY = window.innerHeight - noBtn.offsetHeight;
+
+        const randomX = Math.floor(Math.random() * maxX);
+        const randomY = Math.floor(Math.random() * maxY);
+
+        noBtn.style.left = randomX + "px";
+        noBtn.style.top = randomY + "px";
+
+        // Log attempt to press NO
+        sendResponse("Tried to press No");
+    }
+
+    document.addEventListener("mousemove", (e) => {
+        const rect = noBtn.getBoundingClientRect();
+        const distance = Math.hypot(
+            e.clientX - (rect.left + rect.width / 2),
+            e.clientY - (rect.top + rect.height / 2)
+        );
+
+        if (distance < 100) {
+            moveButton();
         }
+    });
 
-        document.addEventListener("mousemove", (e) => {
-            const rect = noBtn.getBoundingClientRect();
-            const distance = Math.hypot(
-                e.clientX - (rect.left + rect.width / 2),
-                e.clientY - (rect.top + rect.height / 2)
-            );
-
-            if (distance < 100) {
-                moveButton();
-            }
-        });
-
-        yesBtn.addEventListener("click", () => {
-            message.innerHTML = "Yayyyyy!!! ❤️🥳";
-        
-            fetch("https://docs.google.com/forms/d/e/1FAIpQLSetXX1YbbY8WfxExhBQbXXuHHlOrevjX-03gzvmRONiIkSHtw/viewform?usp=header", {
-                method: "POST",
-                mode: "no-cors",
-                headers: { "Content-Type": "application/x-www-form-urlencoded" },
-                body: "entry.123456=Someone&entry.654321=Yes"
-            });
-        });
-    </script>
+    yesBtn.addEventListener("click", () => {
+        message.innerHTML = "Yayyyyy!!! ❤️🥳";
+        sendResponse("Clicked Yes");
+    });
+</script>
 
 </body>
 </html>
-
-
-
