--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     const message = document.getElementById("message");
 
     // 🔗 Google Form endpoint (REPLACE WITH YOURS)
-    const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSetXX1YbbY8WfxExhBQbXXuHHlOrevjX-03gzvmRONiIkSHtw/formResponse";
+    const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSetXX1YbbY8WfxExhBQbXXuHHlOrevjX-03gzvmRONiIkSHtw/formResponse"
 
-    const nameField = "entry.123456";   // Replace
-    const responseField = "entry.654321"; // Replace
+    const nameField = "entry.1031580998";   // Replace
+    const responseField = "entry.876474799"; // Replace
 
     function sendResponse(answer) {
         fetch(formURL, {
@@ -109,4 +109,5 @@
 
 </body>
 </html>
+
 
