--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     const message = document.getElementById("message");
 
     // 🔗 Google Form endpoint (REPLACE WITH YOURS)
-    const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSetXX1YbbY8WfxExhBQbXXuHHlOrevjX-03gzvmRONiIkSHtw/formResponse"
+    const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSetXX1YbbY8WfxExhBQbXXuHHlOrevjX-03gzvmRONiIkSHtw/formResponse";
     
 
     const nameField = "entry.1031580998";   // Replace
@@ -110,6 +110,7 @@
 
 </body>
 </html>
+
 
 
 
