--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         noBtn.style.top = randomY + "px";
 
         // Log attempt to press NO
-        sendResponse("Tried to press No");
+        sendResponse("No 😢");
     }
 
     document.addEventListener("mousemove", (e) => {
@@ -104,12 +104,13 @@
 
     yesBtn.addEventListener("click", () => {
         message.innerHTML = "Yayyyyy!!! ❤️🥳";
-        sendResponse("Clicked Yes");
+        sendResponse("Yes 😍");
     });
 </script>
 
 </body>
 </html>
+
 
 
 
